# template_python

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  configure  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml
src/example_app/: __init__.py  config.py  main1.py
tests/: test_app.py
