[tool.poetry]
name = "example_app"
version = "0.1.0"
description = ""
authors = ["Keith Marston <kmarston@asl-control.co.uk>"]
readme = "README.md"
# packages = [{include = "src/example_app"}]

homepage = "https://github.com/smudge1977/template_python"
repository = "https://github.com/smudge1977/template_python"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
lxml = "^4.9.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"


[tool.poetry.group.test.dependencies]
respx = "^0.20.1"
pytest-asyncio = "^0.21.0"
trio = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.
